# libvips_ffi

./: .gitignore  CODEOWNERS  CONTRIBUTING.md  LICENSE  README.md  README_CN.md  TODO.md
.github/workflows/: deploy-docs.yml
developer/docs/: NATIVE_LIBRARY_SIZES_CN.md  api-pipe-todo.md
docs/: API_DESIGN.md  FLUTTER_FFI_LIBVIPS_TUTORIAL.md  api-function-comparison.md  api-function-todo.md  api-pipe-todo.md
docs/developer/: API_DESIGN.md  NATIVE_LIBRARY_SIZES.md  api-function-todo.md
docs/website/: docusaurus.config.ts
docs/website/docs/: intro.md
examples/dart_desktop_example/: pubspec.yaml
examples/libvips_flutter_example_base/: pubspec.yaml  pubspec_overrides.yaml
examples/libvips_flutter_example_base/lib/: libvips_flutter_example_base.dart
examples/macos_example/: README.md  pubspec.yaml
examples/mobile_example/: README.md  pubspec.yaml
examples/windows_example/: pubspec.yaml  pubspec_overrides.yaml
flutter_vips/: pubspec.yaml
flutter_vips/android/: build.gradle  settings.gradle
flutter_vips/benchmark/: compare-sync-async-1.md  compare-sync-async-2.md
flutter_vips/example/: pubspec.yaml
flutter_vips/ios/: libvips_ffi.podspec
flutter_vips/lib/: libvips_ffi.dart
flutter_vips/src/: CMakeLists.txt  libvips_ffi_dummy.cpp
flutter_vips/tool/: check_pub_size.sh
libvips_ffi/: LICENSE  README.md  README_CN.md
libvips_ffi/example/lib/: main.dart  (+1 more)
libvips_ffi/lib/: libvips_ffi.dart
tools/: analyze_lib_sizes.py  analyze_vips_bindings.py  create_tags.py  find_libvips_deps.py  fix_dylib_deps.sh  fix_macos_dylibs.py  generate_api_bindings.py
(+97 files in other folders)
